--- a/src/style.css
+++ b/src/style.css
@@ -65,8 +65,6 @@ button {
 
 button:hover {
     cursor: pointer;
-    background-color: #210F04;
-    color: #FFFFFF;
 }
 
 #content {
@@ -126,4 +124,9 @@ button:hover {
 .text {
     display: flex;
     flex-direction: column;
+}
+
+.current-tab {
+    background-color: #210F04;
+    color: #FFFFFF;
 }
